# dota_updates_tg_bot

./: .env  Cargo.toml  README.md  temp_old.json
src/: errors.rs  file_part.rs  json_part.rs  main.rs  message_part.rs
test_files/: test1_eq.json  test_dif.json
